tests/architecture/fixtures/invalid/ownership-boundaries/cross-app-relative.ts
export { AppProvider } from "apps/core-platform/lib/store/AppProvider";
